[package]
name = "axum_tokyo_play"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
redis = { version = "0.27.3", features = ["tokio-comp"] }
